--- a/assents/style/paginaPricipal.css
+++ b/assents/style/paginaPricipal.css
@@ -1,3 +1,50 @@
-#opcao_quiz{
+#opcao_quiz {
     display: none;
+}
+
+body {
+    margin: 0;
+    background-color: #b0ffb7;
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+    align-items: center;
+}
+
+#login {
+    border: 1px solid #00ad3a;
+    background-color: #68ff75;
+    border-radius: 10px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    height: 20%;
+    padding: 2%;
+}
+
+.item_form{
+    margin: 5px;
+}
+#btn_login{
+    background-color: #b4ffcd;
+    color: rgb(0, 0, 0);
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all 1s;
+}
+#btn_login:hover{
+    background-color: #00ad3a;
+    color: rgb(0, 255, 55);
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.img_quiz{
+    height: 30vh;
+    width: 30vw;
+    border-radius: 10px;
 }
