--- a/assents/style/paginaPricipal.css
+++ b/assents/style/paginaPricipal.css
@@ -50,3 +50,11 @@ body {
     height: 100vh;
     align-items: center;
 }
+.div_op{
+    justify-content: center;
+    border: #000 1px solid;
+    padding: 5px;
+    width: 30%;
+    margin-top: 15px;
+    display: flex;
+}
