--- a/assents/style/paginaPricipal.css
+++ b/assents/style/paginaPricipal.css
@@ -49,7 +49,8 @@ body {
     width: 300px;
     border-radius: 10px;
 }
-.btn_quiz{
+
+.btn_quiz {
     border-radius: 12px;
     background-color: whitesmoke;
 }
@@ -92,23 +93,38 @@ body {
     justify-content: space-around;
 }
 
-#btn_Finalizar{
+#btn_Finalizar {
     margin: 10px;
     border-radius: 10px;
     box-shadow: 0px 0px 20px 0px black;
     transition: 1s;
 }
+
 /* hover or active */
-.btn_quiz:hover{
+.btn_quiz:hover {
     border: #7db481 1px solid;
     color: #b0ffb7;
     background-color: #9b9b9b;
+    ;
 }
+
+@media (max-width: 1071px) {
+    #body_quizes {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    #opcao_quiz {
+        margin: 0px 0px 20px 20px;
+    }
+}
+
 .btn_escolha:hover {
     background-color: #e0e0e0;
     color: rgb(23, 68, 68);
 }
-#btn_Finalizar:hover{
+
+#btn_Finalizar:hover {
     background-color: #222e23;
     color: #b0ffb7;
     border: #b0ffb7 solid 1px;
