--- a/assents_Rank/style/principal_rank.css
+++ b/assents_Rank/style/principal_rank.css
@@ -27,12 +27,16 @@ body {
     margin-left: 4px;
     font-size: 40px;
 }
-#body-rank{
+
+#body-rank {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-#db_div, #js_div, #mr_div {
+
+#db_div,
+#js_div,
+#mr_div {
     border: 1px solid #000;
     border-radius: 10px;
     padding: 10px;
