--- a/assents_Rank/style/principal_rank.css
+++ b/assents_Rank/style/principal_rank.css
@@ -37,6 +37,7 @@ body {
 #db_div,
 #js_div,
 #mr_div {
+    box-shadow: 6px 8px 8px 0px rgba(0, 0, 0, 0.2);
     border: 1px solid #000;
     border-radius: 10px;
     padding: 10px;
